# audio-chapter-splitter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_hoerspiel_env.bat  setup_hoerspiel_env.sh  setup_story_env.bat  setup_story_env.sh  split_audio_by_reference.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml  release.yml
docs/: sliding_window_explainer_animation.py
tests/: audio_fixtures.py  test_cli.py  test_integration.py
