[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-chapter-splitter"
version = "0.2.0"
description = "Split long audio files into chapter tracks by matching repeated divider clips."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Columbo" }
]
keywords = ["audio", "chapters", "toniebox", "ffmpeg", "librosa"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "librosa>=0.10,<1.0",
  "numpy>=1.26,<3.0",
  "pydub>=0.25,<1.0",
]

[project.scripts]
audio-chapter-splitter = "split_audio_by_reference:main"

[tool.setuptools]
py-modules = ["split_audio_by_reference"]
