[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-chapter-splitter"
version = "0.2.0"
description = "Split long audio files into chapter tracks by matching repeated divider clips."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { file = "LICENSE" }
authors = [
  { name = "Columbo" }
]
keywords = ["audio", "chapters", "toniebox", "ffmpeg", "librosa"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "librosa>=0.10,<1.0",
  "numpy>=1.26,<3.0",
  "pydub>=0.25,<1.0",
]

[project.optional-dependencies]
docs = [
  "imageio>=2.34,<3.0",
  "imageio-ffmpeg>=0.5,<1.0",
  "Pillow>=10.0,<12.0",
]

[project.scripts]
audio-chapter-splitter = "split_audio_by_reference:main"

[tool.setuptools]
py-modules = ["split_audio_by_reference"]
